# opentelemetry-rust

examples/logs-basic/: Cargo.toml
opentelemetry-appender-tracing/: Cargo.toml
opentelemetry-appender-tracing/src/: layer.rs
opentelemetry-otlp/examples/basic-otlp/: Cargo.toml
opentelemetry-otlp/examples/basic-otlp-http/: Cargo.toml
opentelemetry-stdout/: Cargo.toml
opentelemetry-user-events-logs/: Cargo.toml
stress/: Cargo.toml
