[package]
name = "opentelemetry-appender-tracing"
version = "0.2.0"
edition = "2021"
description = "An OpenTelemetry log appender for the tracing crate"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-appender-tracing"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-appender-tracing"
readme = "README.md"
keywords = ["opentelemetry", "log", "logs", "tracing"]
license = "Apache-2.0"
rust-version = "1.65"

[dependencies]
opentelemetry = { version = "0.21", features = ["logs"] }
opentelemetry_sdk = { version = "0.21", features = ["logs"] }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "registry",
    "std",
] }
once_cell = "1.13.0"
tracing-opentelemetry = { version = "0.22.0", features = [] }

[dev-dependencies]
opentelemetry-stdout = { path = "../opentelemetry-stdout", features = ["logs"] }

[features]
logs_level_enabled = [
    "opentelemetry/logs_level_enabled",
    "opentelemetry_sdk/logs_level_enabled",
]
default = ["logs_level_enabled"]
